force-app/main/default/objects/WorkOrder/fields/Actions__c.field-meta.xml
<CustomField>
    <fullName>Actions__c</fullName>
    <label>Actions</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_de_l_intervention__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>21</fullName>
                <label>Ajout de poste</label>
            </value>
            <value>
                <fullName>25</fullName>
                <label>Auto désinstallation</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Changement (TV, barre de son ect …)</label>
            </value>
            <value>
                <fullName>29</fullName>
                <label>Configuration Meters (si boite mail ok)</label>
            </value>
            <value>
                <fullName>30</fullName>
                <label>Configuration routeur (connexion des equipements au routeur Mediametrie )</label>
            </value>
            <value>
                <fullName>31</fullName>
                <label>Configuration routeur (connexion des equipements au routeur Mediametrie ) 2 et +</label>
            </value>
            <value>
                <fullName>26</fullName>
                <label>Configuration Routeur (Pame)</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Contrôle audience</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>Contrôle de connexion</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Contrôle de l&apos;installation</label>
            </value>
            <value>
                <fullName>24</fullName>
                <label>Contrôle qualité</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Déménagement</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Désinstallation définitive</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Mise à jour équipement</label>
            </value>
            <value>
                <fullName>32</fullName>
                <label>Modification Abonnement</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Mutation Audimètre</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Nouveau foyer</label>
            </value>
            <value>
                <fullName>27</fullName>
                <label>Paramétrage Meters 2 à 4</label>
            </value>
            <value>
                <fullName>28</fullName>
                <label>Paramétrage Meters 5 à 8</label>
            </value>
            <value>
                <fullName>23</fullName>
                <label>Passage Improviste</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Pb Sonde Tv (Déclaration)</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Réinstallation</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Routeur ne s&apos;allume plus</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Suppression d&apos;un poste</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Vérification de l&apos;initialisation</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Vérification des éléments</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Visite de courtoisie</label>
            </value>
            <value>
                <fullName>33</fullName>
                <label>Streaming Meter</label>
            </value>
            <value>
                <fullName>34</fullName>
                <label>Contrôle Streaming Meter</label>
            </value>
            <value>
                <fullName>35</fullName>
                <label>Réinstallation Streaming Meter</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>