force-app/main/default/objects/WorkOrder/fields/AMCGP1__AMC_WO_Reporting_Count__c.field-meta.xml
<CustomField>
    <fullName>AMCGP1__AMC_WO_Reporting_Count__c</fullName>
    <description>To count number of work orders in reports</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WO Reporting Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>