force-app/main/default/objects/WorkOrder/fields/Besoin_d_un_RDV__c.field-meta.xml
<CustomField>
    <fullName>Besoin_d_un_RDV__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Besoin d’un RDV</label>
    <type>Checkbox</type>
</CustomField>