force-app/main/default/objects/WorkOrder/fields/Complement_d_adresse__c.field-meta.xml
<CustomField>
    <fullName>Complement_d_adresse__c</fullName>
    <formula>Account.Complement_d_adresse__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Complément d&apos;adresse</label>
    <type>Text</type>
</CustomField>