force-app/main/default/objects/WorkOrder/fields/Debut_Planifie__c.field-meta.xml
<CustomField>
    <fullName>Debut_Planifie__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Début Planifié</label>
    <type>DateTime</type>
</CustomField>