force-app/main/default/objects/WorkOrder/fields/Digicode_Interphone__c.field-meta.xml
<CustomField>
    <fullName>Digicode_Interphone__c</fullName>
    <formula>Account.Digicode_Interphone__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Digicode/Interphone</label>
    <type>Text</type>
</CustomField>