force-app/main/default/objects/WorkOrder/fields/Duration_action__c.field-meta.xml
<CustomField>
    <fullName>Duration_action__c</fullName>
    <label>Durée</label>
    <summarizedField>WorkOrderLineItem.Duration</summarizedField>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>