force-app/main/default/objects/WorkOrder/fields/Equipement_du_foyer__c.field-meta.xml
<CustomField>
    <fullName>Equipement_du_foyer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Équipement du foyer</label>
    <referenceTo>Equipements_du_foyer__c</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>