force-app/main/default/objects/WorkOrder/fields/Etapes_de_chute__c.field-meta.xml
<CustomField>
    <fullName>Etapes_de_chute__c</fullName>
    <label>Étapes de chute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entre le CATI 2 et l&apos;installation</fullName>
            </value>
            <value>
                <fullName>Pendant l&apos;installation</fullName>
            </value>
            <value>
                <fullName>Au cours de la participation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>