force-app/main/default/objects/WorkOrder/fields/Etat__c.field-meta.xml
<CustomField>
    <fullName>Etat__c</fullName>
    <label>État</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>En cours</fullName>
            </value>
            <value>
                <fullName>OK</fullName>
            </value>
            <value>
                <fullName>OK avec recensement au fil de l&apos;eau</fullName>
            </value>
            <value>
                <fullName>Annulé déplacement - Anomalie résolue</fullName>
            </value>
            <value>
                <fullName>Chuté</fullName>
            </value>
            <value>
                <fullName>Mise à jour équipement</fullName>
            </value>
            <value>
                <fullName>Annulé déplacement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>