force-app/main/default/objects/WorkOrder/fields/FAI__c.field-meta.xml
<CustomField>
    <fullName>FAI__c</fullName>
    <label>FAI</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>-1</fullName>
                <label>non renseigné</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>Non abonné internet</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Alice/Tiscali</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>AOL</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Bouygues</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Darty</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Free</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Numéricable</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Orange</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>SFR/NEUF</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>TELE 2</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Autre</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>NSP</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>