force-app/main/default/objects/WorkOrder/fields/Fin_Planifie__c.field-meta.xml
<CustomField>
    <fullName>Fin_Planifie__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Fin Planifié</label>
    <type>DateTime</type>
</CustomField>