force-app/main/default/objects/WorkOrder/fields/Foyer_paneliste__c.field-meta.xml
<CustomField>
    <fullName>Foyer_paneliste__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Foyer panéliste</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Le foyer sélectionné n&apos;est pas celui du foyer panéliste</errorMessage>
        <filterItems>
            <field>Foyer_paneliste__c.Foyer__c</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Foyer_paneliste__c</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>