force-app/main/default/objects/WorkOrder/fields/Lien_Email_Satisfaction__c.field-meta.xml
<CustomField>
    <fullName>Lien_Email_Satisfaction__c</fullName>
    <formula>&quot;https://onlinesurvey.mediametrie.fr/S2/?st=IImug9SU10Jme0MJq5bGz%2Bkvj463OhoBGwWtHGCbLGw%3D&amp;urlimport=1&amp;questlist=PANEL;TYPERDV;IDFOYER;DATERDV;STATION;CIVILITE;CDF&amp;PANEL=&quot;+IF(Type_de_panel__c == &apos;MMT&apos;,&apos;1&apos;, &apos;2&apos;)+&quot;&amp;TYPERDV=&quot;+IF(TEXT(Type_de_l_intervention__c) == &apos;1&apos;,&apos;1&apos;, &apos;2&apos;)+&quot;&amp;IDFOYER=&quot;+Account.Id+&quot;&amp;DATERDV=&quot;+TEXT(DATEVALUE(StartDate))+&quot;&amp;STATION=&quot;+Account.Station__c+&quot;&amp;CIVILITE=&quot;+ TEXT(Contact.Sexe__c) +&quot;&amp;CDF=&quot;+ IF(ISNULL(Account.Contact_principal__c), &apos;2&apos;, &apos;1&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lien_Email_Satisfaction</label>
    <type>Text</type>
</CustomField>