force-app/main/default/objects/WorkOrder/fields/Mail_Support__c.field-meta.xml
<CustomField>
    <fullName>Mail_Support__c</fullName>
    <formula>Contact.Mail_support__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mail Support</label>
    <type>Text</type>
</CustomField>