force-app/main/default/objects/WorkOrder/fields/Montant__c.field-meta.xml
<CustomField>
    <fullName>Montant__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Montant (HT)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>