force-app/main/default/objects/WorkOrder/fields/Motifs_de_chute__c.field-meta.xml
<CustomField>
    <fullName>Motifs_de_chute__c</fullName>
    <label>Motifs de chute</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abonnement internet suspendu ou résilié</fullName>
            </value>
            <value>
                <fullName>Autre motif (voir commentaire et informer N+1)</fullName>
            </value>
            <value>
                <fullName>Autre motif</fullName>
            </value>
            <value>
                <fullName>Accès Internet clé 3G ou bas débit</fullName>
            </value>
            <value>
                <fullName>Audimètre perturbe le téléviseur</fullName>
            </value>
            <value>
                <fullName>CATI 3 manquant</fullName>
            </value>
            <value>
                <fullName>Chutes MM : mauvaise participation ; joignabilité</fullName>
            </value>
            <value>
                <fullName>Chute panéliste : suite déménagement</fullName>
            </value>
            <value>
                <fullName>Chutes forcées : ajustement quotas</fullName>
            </value>
            <value>
                <fullName>Chutes forcées : déménagement chute hors quotas</fullName>
            </value>
            <value>
                <fullName>Chute panéliste : Motivation : rémumération</fullName>
            </value>
            <value>
                <fullName>Chute liée à la participation GOOGLE</fullName>
            </value>
            <value>
                <fullName>Déménagement à l&apos;étranger</fullName>
            </value>
            <value>
                <fullName>Installation TV impossible : connexion GSM &amp; Internet</fullName>
            </value>
            <value>
                <fullName>Install TV impossible : pas de sortie son</fullName>
            </value>
            <value>
                <fullName>Install TV impossible : sotie exclusive hauts parleurs</fullName>
            </value>
            <value>
                <fullName>Install TV impossible : O détection ON/OFF</fullName>
            </value>
            <value>
                <fullName>Mauvaise réception TV</fullName>
            </value>
            <value>
                <fullName>Ne peut plus participer (NPF1)</fullName>
            </value>
            <value>
                <fullName>Non répondants depuis plus de 3 mois</fullName>
            </value>
            <value>
                <fullName>Problème de connexion routeur</fullName>
            </value>
            <value>
                <fullName>Problème de connexion GSM / Wifi / CPL récurrents</fullName>
            </value>
            <value>
                <fullName>Perte de contact : 0 news + multiples relances</fullName>
            </value>
            <value>
                <fullName>Refus panéliste : rétractation avant install</fullName>
            </value>
            <value>
                <fullName>Refus panéliste : audimètre qui chauffe</fullName>
            </value>
            <value>
                <fullName>Refus d&apos;équiper un appareil audio visuel</fullName>
            </value>
            <value>
                <fullName>Refus panéliste : Raison esthétique (fils ou DMD)</fullName>
            </value>
            <value>
                <fullName>Refus panéliste : KO connexion routeur internet</fullName>
            </value>
            <value>
                <fullName>Raisons personnelles</fullName>
            </value>
            <value>
                <fullName>Refus de signer la convention</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>