force-app/main/default/objects/WorkOrder/fields/N_de_portable__c.field-meta.xml
<CustomField>
    <fullName>N_de_portable__c</fullName>
    <formula>Account.Numero_de_portable__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° de portable</label>
    <type>Text</type>
</CustomField>