force-app/main/default/objects/WorkOrder/fields/N_de_tel_fixe__c.field-meta.xml
<CustomField>
    <fullName>N_de_tel_fixe__c</fullName>
    <formula>Account.Numero_de_telephone_fixe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° de tel fixe</label>
    <type>Text</type>
</CustomField>