force-app/main/default/objects/WorkOrder/fields/N_du_conjoint__c.field-meta.xml
<CustomField>
    <fullName>N_du_conjoint__c</fullName>
    <formula>Account.Numero_du_conjoint__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° du conjoint</label>
    <type>Text</type>
</CustomField>