force-app/main/default/objects/WorkOrder/fields/N_du_contact_principal__c.field-meta.xml
<CustomField>
    <fullName>N_du_contact_principal__c</fullName>
    <formula>Account.Contact_principal__r.MobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>N° du contact principal</label>
    <type>Text</type>
</CustomField>