force-app/main/default/objects/WorkOrder/fields/Nombre_d_actions_liees__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_actions_liees__c</fullName>
    <label>Nombre d&apos;actions liées</label>
    <summaryForeignKey>WorkOrderLineItem.WorkOrderId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>