force-app/main/default/objects/WorkOrder/fields/Nombre_d_equipements__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_equipements__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de Postes</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>