force-app/main/default/objects/WorkOrder/fields/Nombre_d_ordinateur__c.field-meta.xml
<CustomField>
    <fullName>Nombre_d_ordinateur__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre d&apos;ordinateurs</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>