force-app/main/default/objects/WorkOrder/fields/Nombre_de_peripheriques__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_peripheriques__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre de périphériques</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>