force-app/main/default/objects/WorkOrder/fields/Nombre_TV__c.field-meta.xml
<CustomField>
    <fullName>Nombre_TV__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Nombre TV active</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>