force-app/main/default/objects/WorkOrder/fields/Numero_de_telephone__c.field-meta.xml
<CustomField>
    <fullName>Numero_de_telephone__c</fullName>
    <formula>IF( Type_de_panel__c == $Label.ACC_Type_de_panel_Mediamat_Label , $Label.NumeroMediamat ,IF(Type_de_panel__c == $Label.ACC_Type_de_panel_Pame_Label, $Label.NumeroPame,&apos;&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Numéro de téléphone</label>
    <type>Text</type>
</CustomField>