force-app/main/default/objects/WorkOrder/fields/R_f_rentiel_alarme__c.field-meta.xml
<CustomField>
    <fullName>R_f_rentiel_alarme__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Référentiel alarme</label>
    <referenceTo>Referentiel_alarme__c</referenceTo>
    <relationshipLabel>Interventions</relationshipLabel>
    <relationshipName>Interventions</relationshipName>
    <type>Lookup</type>
</CustomField>