force-app/main/default/objects/WorkOrder/fields/Remarques__c.field-meta.xml
<CustomField>
    <fullName>Remarques__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Remarques</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>