force-app/main/default/objects/WorkOrder/fields/Tech_AudimPoste__c.field-meta.xml
<CustomField>
    <fullName>Tech_AudimPoste__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_AudimPoste</label>
    <type>Checkbox</type>
</CustomField>