force-app/main/default/objects/WorkOrder/fields/Tech_Email__c.field-meta.xml
<CustomField>
    <fullName>Tech_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Tech_Email</label>
    <type>Email</type>
</CustomField>