force-app/main/default/objects/WorkOrder/fields/Tech_FinInter__c.field-meta.xml
<CustomField>
    <fullName>Tech_FinInter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_FinInter</label>
    <type>Checkbox</type>
</CustomField>