force-app/main/default/objects/WorkOrder/fields/Tech_rdd__c.field-meta.xml
<CustomField>
    <fullName>Tech_rdd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_rdd</label>
    <type>Checkbox</type>
</CustomField>