force-app/main/default/objects/WorkOrder/fields/Tech_RDV_App__c.field-meta.xml
<CustomField>
    <fullName>Tech_RDV_App__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_RDV_App</label>
    <type>Checkbox</type>
</CustomField>