force-app/main/default/objects/WorkOrder/fields/Tech_RV03__c.field-meta.xml
<CustomField>
    <fullName>Tech_RV03__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_RV03</label>
    <type>Checkbox</type>
</CustomField>