force-app/main/default/objects/WorkOrder/fields/Tech_TestClass__c.field-meta.xml
<CustomField>
    <fullName>Tech_TestClass__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tech_TestClass</label>
    <type>Checkbox</type>
</CustomField>