force-app/main/default/objects/WorkOrder/fields/Type_audimetre__c.field-meta.xml
<CustomField>
    <fullName>Type_audimetre__c</fullName>
    <formula>Asset.Type_d_audimetre__c  + &apos; &apos; +  Asset.Audimetre__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Type/Nom audimètre</label>
    <type>Text</type>
</CustomField>