force-app/main/default/objects/WorkOrder/validationRules/RV05_InterventionNonAutorisee.validationRule-meta.xml
<ValidationRule>
    <fullName>RV05_InterventionNonAutorisee</fullName>
    <active>true</active>
    <errorConditionFormula>AND(!$User.Bypass_validation_rules__c, ISNEW(),!$User.Autoriser_Intervention__c , OR($Profile.Name ==&apos;Ambassadeur&apos; ,$Profile.Name ==&apos;Techs externes&apos; ))</errorConditionFormula>
    <errorMessage>Vous n&apos;êtes pas autorisé à créer une nouvelle intervention.</errorMessage>
</ValidationRule>