force-app/main/default/objects/WorkOrder/validationRules/RV06_Dissociation_Audimetre_Poste.validationRule-meta.xml
<ValidationRule>
    <fullName>RV06_Dissociation_Audimetre_Poste</fullName>
    <active>true</active>
    <errorConditionFormula>/*AND(ISPICKVAL( Status , &apos;Terminée&apos;), Tech_AudimPoste__c = true)*/
Tech_AudimPoste__c = true</errorConditionFormula>
    <errorMessage>Il existe au moins une dissociation audimètre/poste, merci de corriger.</errorMessage>
</ValidationRule>