force-app/main/default/objects/WorkOrder/listViews/D_pannage_Support_MMAT.listView-meta.xml
<ListView>
    <fullName>D_pannage_Support_MMAT</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Type_de_l_intervention__c</columns>
    <columns>Sous_type_d_intervention__c</columns>
    <columns>Etat__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_de_l_intervention__c</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <filters>
        <field>Type_de_panel__c</field>
        <operation>contains</operation>
        <value>MEDIAMAT</value>
    </filters>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>Terminée</value>
    </filters>
    <filters>
        <field>Etat__c</field>
        <operation>equals</operation>
        <value>OK,OK avec recensement au fil de l&apos;eau</value>
    </filters>
    <label>Dépannage/Support MMAT</label>
</ListView>