force-app/main/default/objects/WorkOrder/listViews/D_sinstallations_d_finitives_PaME.listView-meta.xml
<ListView>
    <fullName>D_sinstallations_d_finitives_PaME</fullName>
    <columns>Name</columns>
    <columns>Account</columns>
    <columns>Type_de_l_intervention__c</columns>
    <columns>Sous_type_d_intervention__c</columns>
    <columns>Status</columns>
    <columns>Priority</columns>
    <columns>ServiceTerritory</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type_de_l_intervention__c</field>
        <operation>equals</operation>
        <value>2</value>
    </filters>
    <filters>
        <field>Type_de_panel__c</field>
        <operation>contains</operation>
        <value>PaME</value>
    </filters>
    <filters>
        <field>Sous_type_d_intervention__c</field>
        <operation>equals</operation>
        <value>8</value>
    </filters>
    <filters>
        <field>EndDate</field>
        <operation>equals</operation>
        <value>12/5/2023 12:00 AM</value>
    </filters>
    <label>Désinstallations définitives PaME</label>
</ListView>